# indic-parser

indic-parser/: pyproject.toml  setup.cfg
indic-parser/src/layout-inference/: __init__.py
indic-parser/src/main/: __init__.py
