[metadata]
name = 0.9.0
description = 'Package for layout parsing for indic languages'
long description = file: README.md
long_description_content_type = markdown
url = 'https://github.com/Saurabhbaghel/indic-parser/tree/pip-installable/indic-parser'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = ['main','layout-inference']
python_requires = find:
[options.packages.find]
where = 'layout-inference'
